--- a/Behavioral/ChainOfResponsibility/package.json
+++ b/Behavioral/ChainOfResponsibility/package.json
@@ -2,7 +2,7 @@
   "name": "chainofresponsibility",
   "version": "1.0.0",
   "description": "Chain of Responsibility Example",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
