--- a/Behavioral/Memento/package.json
+++ b/Behavioral/Memento/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mediator",
+  "name": "memento",
   "version": "1.0.0",
-  "description": "Mediator Pattern Example",
+  "description": "Memento Pattern Example",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
