--- a/Behavioral/Visitor/package.json
+++ b/Behavioral/Visitor/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "observer",
+  "name": "visitor",
   "version": "1.0.0",
-  "description": "Observer Pattern Example",
+  "description": "Visitor Pattern Example",
   "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
